@@ -1,0 +1,6 @@
+{"shim-unsigned": {
+	"files": [
+		{"sig_type": "efi", "file": "usr/lib/shim/fb@efi@.efi"},
+		{"sig_type": "efi", "file": "usr/lib/shim/mm@efi@.efi"}
+	]
+}}
